--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,7 +2,18 @@
     width: 100%;
     height: 100px;
     display: flex;
-    flex-direction: row;
     justify-content: flex-start;
-    border: 1px black solid;
+    align-items: center;
+    /*!*margin-left:80px;*!*/
+    /*padding-top: 10px;*/
+    /*background-color: gold;*/
+
+}
+.header img{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    left: 50%;
+    top: 0;
+    transform: translate(0,50%);
 }
