--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -1,5 +1,39 @@
 .navBar {
+    display: flex;
+    height: 100%;
+    width: 100vw;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 60px;
+    padding-top: 20px;
 
 
 }
 
+.list {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+
+}
+
+.item {
+    font-size: 16px;
+    line-height: 120%;
+    color: #000000;
+    text-decoration: none;
+    padding: 4px 16px 32px 16px;
+}
+
+.active {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 120%;
+    font-family: Raleway;
+    text-decoration: none;
+    padding: 4px 16px 32px 16px;
+    color: #5ece7b;
+    border-bottom: 2px solid #5ece7b;
+}
