--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -9,7 +9,7 @@
     /*background-color: gold;*/
 
 }
-.header img{
+.logo{
     position: absolute;
     display: flex;
     justify-content: center;
