--- a/src/components/currency/Currency.module.css
+++ b/src/components/currency/Currency.module.css
@@ -1,111 +1,86 @@
-.currency{
+.currency {
+    width: 40px;
+    margin-left: -230px;
+
+
+}
+
+.currencyButton {
+    position: relative;
+    /*  font-family: Raleway;*/
+    /*  font-weight:500;*/
+    /*  font-size:20px;*/
+    /*  margin-right:20px;*/
+    /*  line-height: 160%;*/
+    /*  border:none;*/
+    /*  background-color: #FFF;*/
+    cursor: pointer;
+    /*  transition:all 250ms;*/
+
+}
+
+.currencyButton:hover {
+    transform: scale(1.06)
+}
+.currencyOptions {
+    position: absolute;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 65px;
-  margin-left: -230px;
-  background-color: #5ece7b;
-
-}
-/*.actionsContainer{*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*  align-items: center;*/
-/*  width: 65px;*/
-/*}*/
-/*.currencySwitcher{*/
-/*  position: relative;*/
-/*}*/
-/*.currencySwitcherValue{*/
-/*  font-weight: 500;*/
-/*  font-size: 18px;*/
-/*  line-height: 29px;*/
-/*  cursor: pointer;*/
-/*}*/
-/*.currencySwitcherValue:hover {*/
-/*  opacity: .7;*/
-/*}*/
-/*.currencyArrow{*/
-/*  position: absolute;*/
-/*  width: 5px;*/
-/*  height: 5px;*/
-/*  top: 13px;*/
-/*  left: 22px;*/
-/*  transform: rotate(135deg);*/
-/*  background-color: black;*/
-/*}*/
-/*.actions-currency-arrow::after {*/
-/*  display: block;*/
-/*  content: '';*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*  border-width: 1px 1px 0 0;*/
-/*  border-style: solid;*/
-/*}*/
-/*.currenciesList{*/
-/*  display: none;*/
-/*  position: absolute;*/
-/*  top: 30px;*/
-/*  left: -20px;*/
-
-/*  width: 114px;*/
-/*  min-height: 169px;*/
-/*  padding-left: 20px;*/
-/*  padding-top: 20px;*/
-/*  background-color: #FFFFFF;*/
-/*}*/
-/*.open{*/
-
-/*}*/
-.currencyButton{
-  position:relative;
-  font-family: Raleway;
-  font-weight:500;
-  font-size:20px;
-  margin-right:20px;
-  line-height: 160%;
-  border:none;
-  background-color: #FFF;
-  cursor: pointer;
-  transition:all 250ms;
+    flex-direction: column;
+    width: 100px;
+    margin-top: 20px;
+    margin-left: -10px;
+    background-color: #FFF;
+    z-index: 10;
+    background-color: black;
+    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
 }
 
-.currencyButton:hover{
-  transform:scale(1.06)
+.optionsButton {
+    padding: 20px 0;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 160%;
+    border: none;
+    background-color: #FFF;
+    cursor: pointer;
+    transition: all 250ms;
+
 }
 
-.currencyOptions{
-  position:absolute;
-  display: flex;
-  flex-direction: column;
-  width: 100px;
-  background-color: #FFF;
-  z-index:10;
-  box-shadow:0px 4px 35px rgba(168,172,176,0.19);
-}
-
-.optionsButton{
-  padding:20px 0;
-  font-family:Raleway;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height:160%;
-  border:none;
-  background-color: #FFF;
-  cursor:pointer;
-  transition:  all 250ms;
-}
-
-.optionsButton:hover{
-  color: #ffffff;
-  background-color: #5ece7b;
+.optionsButton:hover {
+    color: #ffffff;
+    background-color: #5ece7b;
 
 }
 
 
 .down{
-  width:10px;
-  margin-bottom:0px;
-  height:10px;
+    /*width: 10px;*/
+    /*margin-bottom: 30px;*/
+    /*height: 10px;*/
+    width: 4px;
+    height: 4px;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    margin: 0 0 3px 10px;
+    transform: rotate(135deg);
+    display: inline-block;
+    transition: 1s;
+
+}
+.up{
+    /*width: 10px;*/
+    /*margin-bottom: 30px;*/
+    /*height: 10px;*/
+    /*transform: rotate(180deg);*/
+    width: 4px;
+    height: 4px;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    margin: 0 0 3px 10px;
+    transform: rotate(-45deg);
+    display: inline-block;
+    transition: 1s;
 }
