--- a/src/views/product/ProductAttributes.module.css
+++ b/src/views/product/ProductAttributes.module.css
@@ -1,44 +1,45 @@
-.attributesContainer{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+.attributesContainer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
 }
 
-.title{
-  font-family: Roboto Condensed;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 18px;
-  margin-bottom: 8px;
+.title {
+    font-family: Roboto Condensed;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 18px;
+    margin-bottom: 8px;
 }
 
-.list{
-  display: flex;
-  padding-top: 10px;
+.list {
+    display: flex;
+    padding-top: 10px;
 }
+
 .attributeItem {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  width: 63px;
-  height: 45px;
-  border: 1px solid #1D1F22;
-  margin-right: 10px;
-  margin-bottom: 20px;
-  cursor: pointer;
+    width: 63px;
+    height: 45px;
+    border: 1px solid #1D1F22;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .attributeItem:hover {
-  border: 1px solid #A6A6A6;
-  color: #A6A6A6;
+    border: 1px solid #A6A6A6;
+    color: #A6A6A6;
 }
 
 .attributeItem.active {
-  background-color: #1D1F22;
-  color: #fafafa;
+    background-color: red;
+    color: #fafafa;
 }
 
 .attributeItem.activeSwatch {
-  outline: 2px solid #1D1F22;
+    outline: 2px solid red;
 }
