--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -1,9 +1,24 @@
 .modalContainer {
-  position: absolute;
-  top: 78px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(57, 55, 72, 0.22);
-  z-index: 100;
+    position: fixed;
+    top: 78px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0.35;
+    z-index: 20;
+}
+
+.modal {
+    position: fixed;
+    top: 8%;
+    right: 2%;
+    width: 25%;
+    height: 500px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    z-index: 21;
 }
