--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -14,7 +14,7 @@
     top: 8%;
     right: 2%;
     width: 25%;
-    height: 500px;
+    height: 60%;
     /*display: flex;*/
     /*flex-flow: column;*/
     /*align-items: center;*/
