--- a/src/views/product/ProductAttributes.module.css
+++ b/src/views/product/ProductAttributes.module.css
@@ -1,31 +1,33 @@
 .attributesContainer {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*margin-bottom: 20px;*/
 }
 
 .title {
     font-family: Roboto Condensed;
     font-weight: 700;
-    font-size: 18px;
-    line-height: 18px;
+    font-size: 1em;
     margin-bottom: 8px;
 }
 
 .list {
     display: flex;
-    padding-top: 10px;
+    /*padding-top: 10px;*/
 }
 
 .attributeItem {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 63px;
-    height: 45px;
+    /*width: 15%;*/
+    /*height: 20px;*/
     border: 1px solid #1D1F22;
-    margin-right: 10px;
-    margin-bottom: 20px;
+    margin-right: 5px;
+    /*margin-bottom: 20px;*/
+    font-size: 10px;
+    font-weight: 700;
+    padding: 3%;
     cursor: pointer;
     background-color: gold;
 }
@@ -35,30 +37,30 @@
     color: #A6A6A6;
 }
 
-.active{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 63px;
-    height: 45px;
-    border: 1px solid #c51111!important;
-    margin-right: 10px;
-    margin-bottom: 20px;
-    cursor: pointer;
-    color: #fafafa;
+.active {
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*width: 63px;*/
+    /*height: 45px;*/
+    border: 2px solid #c51111 !important;
+
+/*    margin-right: 10px;*/
+/*    margin-bottom: 20px;*/
+/*    cursor: pointer;*/
+/*    color: #fafafa;*/
 }
 
-.activeSwatch{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 63px;
-    height: 45px;
-    border: 1px solid #1D1F22;
-    margin-right: 10px;
-    margin-bottom: 20px;
-    cursor: pointer;
+/*.activeSwatch{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    width: 63px;*/
+/*    height: 45px;*/
+/*    border: 1px solid #1D1F22;*/
+/*    margin-right: 10px;*/
+/*    margin-bottom: 20px;*/
+/*    cursor: pointer;*/
+/*    outline: 2px solid red;*/
 
-    outline: 2px solid red;
-    background-color: blueviolet;
-}
+/*}*/
