--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -6,7 +6,8 @@
     height: 100%;
     background: black;
     opacity: 0.35;
-    z-index: 20;
+    z-index: 10;
+    cursor: pointer;
 }
 
 .modal {
