--- a/src/views/cart/Cart.module.css
+++ b/src/views/cart/Cart.module.css
@@ -1,4 +1,4 @@
-.cartBlock{
+.cartBlock {
     width: 100%;
     height: 100%;
 
@@ -43,18 +43,51 @@
 
 }
 
+.attributesContainer {
 
-.galleryBlock{
+}
+
+.title {
+    font-family: Roboto Condensed;
+    font-weight: 700;
+    font-size: 1em;
+    margin-bottom: 8px;
+}
+
+.list {
+    display: flex;
+}
+
+.attributeItem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*width: 15%;*/
+    /*height: 20px;*/
+    border: 1px solid #1D1F22;
+    margin-right: 5px;
+    /*margin-bottom: 20px;*/
+    font-size: 10px;
+    font-weight: 700;
+    padding: 3%;
+    cursor: pointer;
+}
+
+.active {
+    border: 2px solid #c51111 !important;
+}
+
+.galleryBlock {
     display: flex;
     /*justify-content: flex-end;*/
     width: 50%;
-    background-color: #5ece7b;
 }
+
 .galleryContainer {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-background-color: #8d8f9a;
+
 
 }
 
@@ -89,7 +122,7 @@ background-color: #8d8f9a;
     display: flex;
     justify-content: center;
     object-fit: contain;
-    background-color: #8d8f9a;
+
 }
 
 .cartImgItem {
@@ -99,6 +132,11 @@ background-color: #8d8f9a;
     object-fit: contain;
     /*margin-left: 30%;*/
 }
+
+.image {
+    width: 50%;
+}
+
 .arrowContainer {
     position: relative;
 
@@ -132,9 +170,10 @@ background-color: #8d8f9a;
     content: ">";
     font-size: 20px;
 }
-.totalSum {
+
+.total{
     /*display: flex;*/
-    background-color: gold;
+
     /*justify-content: space-between;*/
     /*margin-top: 50px;*/
     padding-left: 10px;
