--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -4,22 +4,32 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: black;
-    opacity: 0.35;
+    background: rgba(57, 55, 72, 0.22);
     z-index: 10;
     cursor: pointer;
 }
 
 .modal {
     position: fixed;
-    top: 8%;
-    right: 2%;
-    width: 25%;
-    height: 60%;
+    width: 325px;
+    height: 677px;
+    /*left: 1043px;*/
+    top: 78px;
+    background: #FFFFFF;
+    /*position: fixed;*/
+    /*top: 8%;*/
+    right: 80px;
+    /*width: 25%;*/
+    /*height: 60%;*/
+    /*!*position: static;*!*/
+    /*!*width: 121px;*!*/
+    /*!*height: 190px;*!*/
+    /*left: calc(50% - 10%/2);*/
+    /*top: calc(50% - 60%/2);*/
     /*display: flex;*/
-    /*flex-flow: column;*/
+    /*!*!*flex-flow: column;*!*!*/
     /*align-items: center;*/
     /*justify-content: center;*/
-    background: white;
+    /*background: white;*/
     z-index: 21;
 }
