--- a/src/views/cart/Cart.module.css
+++ b/src/views/cart/Cart.module.css
@@ -1,61 +1,81 @@
 .cartBlock {
-    width: 100%;
-    height: 100%;
+    /*width: 100%;*/
+    /*height: 100%;*/
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+
 
 }
 
+.cartTitle {
+    margin-right: 85%;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 150%;
+    line-height: 40px;
+}
 .cartContainer {
-    width: 100%;
-    max-height: 90%;
     display: flex;
-    /*justify-content: space-between;*/
-    color: #1d1f22;
-    margin-bottom: 20px;
+    justify-content: space-between;
+    align-items: center;
+    /*padding: 32px 16px;*/
+    margin-top: 35px;
+    width: 90%;
+
 }
 
 .attributeContainer {
-    width: 50%;
+    width: 100%;
     line-height: 1.5em;
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*justify-content: space-between;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .brand {
-    font-family: Raleway;
+    font-family: 'Raleway', 'sans-serif';
+    font-size: 150%;
     font-weight: 300;
-    font-size: 1em;
-
-    margin-top: 20px;
+    line-height: 26px;
 }
 
 .name {
-    font-family: Raleway;
+    font-family: 'Raleway', 'sans-serif';
+    font-size: 150%;
     font-weight: 300;
-    font-size: 1em;
+    line-height: 26px;
 
 }
 
 .price {
-    font-family: Raleway;
+    font-family: 'Raleway', 'sans-serif';
     font-weight: 500;
-    font-size: 1em;
+    font-size: 150%;
+    line-height: 25px;
+    margin-top: 5px;
+    margin-bottom: 27px;
 
 }
 
 .attributesContainer {
-
+    /*width: 100%;*/
 }
 
 .title {
     font-family: Roboto Condensed;
     font-weight: 700;
-    font-size: 1em;
+    font-size: 150%;
     margin-bottom: 8px;
 }
 
 .list {
-    display: flex;
+    /*display: flex;*/
 }
 
 .attributeItem {
@@ -79,14 +99,22 @@
 
 .galleryBlock {
     display: flex;
-    /*justify-content: flex-end;*/
-    width: 50%;
+    justify-content: space-between;
+    align-items: center;
+    /*margin-left: 20px;*/
+    width: 70%;
+    /*height: 50%;*/
+    /*left: calc(50% - 121px/2 + 86px);*/
+    /*top: calc(50% - 190px/2);*/
+
 }
 
 .galleryContainer {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
+    width: 90%;
 
 
 }
@@ -114,6 +142,7 @@
     font-weight: 500;
     font-size: 0.5em;
     color: #1d1f22;
+
 }
 
 .imageContainer {
@@ -127,7 +156,7 @@
 
 .cartImgItem {
     display: flex;
-    width: 70%;
+    /*width: 70%;*/
     /*height: 185px;*/
     object-fit: contain;
     /*margin-left: 30%;*/
@@ -171,18 +200,30 @@
     font-size: 20px;
 }
 
-.total{
-    /*display: flex;*/
+.line {
+    /*position: absolute;*/
+    width: 95%;
+    height: 1px;
+    left: 100px;
+    top: 929px;
 
-    /*justify-content: space-between;*/
+    background: #E5E5E5;
+}
+
+.total {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+
     /*margin-top: 50px;*/
-    padding-left: 10px;
+    /*margin-right: 85%;*/
+    padding-left: 5%;
 }
 
 .totalTitle {
-    font-size: 100%;
+    font-size: 150%;
 }
 
 .totalPrice {
-    font-size: 32px;
+    font-size: 150%;
 }
