--- a/src/views/cartModal/CartModal.module.css
+++ b/src/views/cartModal/CartModal.module.css
@@ -1,47 +1,78 @@
-.block {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-
-}
 
 .container {
-    width: 90%;
-    height: 90%;
-    /*max-height: 80%;*/
-}
-
-.title {
-    font-family: Raleway, 'sans-serif';
-    font-weight: 700;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    /*padding: 32px 16px ;*/
+    box-sizing: border-box;
+    width: 340px;
+    max-height: 500px;
+    white-space: nowrap;
+    top:78px;
     font-size: 70%;
-    line-height: 1vh;
+
+
+    /*position: absolute;*/
+    /*right: 87px;*/
+
+    /*min-width: 325px;*/
+    /*height: 80%;*/
+    /*color: #1D1F22;*/
+    /*background-color: #FFFFFF;*/
+    /*padding: 20px 13px;*/
+    /*z-index: 11;*/
+}
+.title {
+    position: fixed;
+    top:78px;
+    right: 270px;
+    font-family: Raleway,'sans-serif';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
 }
 
 .titleSpan {
     font-weight: 500;
-    font-size: 80%;
+
 }
 
 .buttons {
-    font-size: 70%;
+    position: fixed;
     display: flex;
     justify-content: space-between;
-    margin-top: -50px;
+    bottom: 185px;
+    /*margin-top: 30px;*/
+
 }
 
 
+.buttons button {
+    font-family: Raleway, sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 120%;
+    text-transform: uppercase;
+    width: 140px;
+    height: 43px;
+    cursor: pointer;
+    margin: 0px 7px;
+}
 .viewBtn {
-    padding: 3px;
-    border: 1px solid #1D1F22;
-    margin-left: 10px;
-}
 
+    color: #1d1f22;
+    background-color: #ffffff;
+    border: 1px solid #1d1f22;
+    cursor: pointer;
+}
+.viewBtn:hover{
+
+}
 .checkoutButton {
-    padding: 3px;
     color: #FFFFFF;
     background-color: #5ECE7B;
-    margin-right: 10px;
     border: none;
 }
