--- a/src/views/product/ProductAttributes.module.css
+++ b/src/views/product/ProductAttributes.module.css
@@ -24,7 +24,7 @@
     align-items: center;
     /*width: 15%;*/
     /*height: 20px;*/
-    font-family: Source Sans Pro;
+    font-family: Source Sans Pro,sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 18px;
