--- a/src/components/carousel/Carousel.module.css
+++ b/src/components/carousel/Carousel.module.css
@@ -1,5 +1,5 @@
 .carouselContainer {
-  width: 50%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -12,8 +12,20 @@
 
 .carouselContentWrapper {
   overflow: hidden;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 250px;
+
+  /*width: 50%;*/
+  /*height: 500px;*/
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*align-items: center;*/
+  /*position: relative;*/
+  /*object-fit: cover;*/
+  /*object-position: center;*/
+  /*background-size: cover;*/
+  /*background-position: center;*/
+  /*background-repeat: no-repeat;*/
 }
 
 .carouselContent {
@@ -35,11 +47,17 @@
 }
 .leftArrow, .rightArrow {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
-  top: 90%;
-  border: 1px black solid;
-  width: 10%;
-  height: 10%;
+  left: 84.6%;
+  right: 5.36%;
+  top: 82.11%;
+  /*bottom: 18.94%;*/
+  border: 1.5px solid #FFFFFF;
+  width: 30px;
+  height: 30px;
   font-size: 120%;
   background-color: black;
   color: white;
