--- a/src/views/cart/Cart.module.css
+++ b/src/views/cart/Cart.module.css
@@ -1,61 +1,79 @@
 .cartBlock {
     /*width: 100%;*/
     /*height: 100%;*/
-    position: relative;
+    /*position: relative;*/
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    align-items: center;
+    padding: 20px 50px;
+    /*align-items: center;*/
+    /*height: 500px;*/
+    /*background-color: #8d8f9a;*/
 
 
 }
+.cartLine{
+    /*height: 186px;*/
+    /*padding-top: 20px;*/
+    margin-bottom:20px;
+    border-top: 1px solid #e5e5e5;
 
+    /*width: 100%;*/
+    /*height: 1px;*/
+    /*left: 100px;*/
+    /*top: 929px;*/
+    /*background: #E5E5E5;*/
+}
 .cartTitle {
-    margin-right: 85%;
+    /*padding-bottom: 5px;*/
     text-transform: uppercase;
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 150%;
-    line-height: 40px;
+    line-height: 70px;
 }
 .cartContainer {
+    /*width: 100%;*/
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /*align-items: center;*/
     /*padding: 32px 16px;*/
-    margin-top: 35px;
-    width: 90%;
+    margin-top: 10px;
+    /*background-color: #5ece7b;*/
+    /*width: 90%;*/
 
 }
 
 .attributeContainer {
     width: 100%;
+
     line-height: 1.5em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    /*align-items: flex-start;*/
+    /*background-color: #c51111;*/
 }
 
 .brand {
     font-family: 'Raleway', 'sans-serif';
     font-size: 150%;
-    font-weight: 300;
+    font-weight: 600 ;
     line-height: 26px;
 }
 
 .name {
     font-family: 'Raleway', 'sans-serif';
     font-size: 150%;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 26px;
 
 }
 
 .price {
     font-family: 'Raleway', 'sans-serif';
-    font-weight: 500;
+    font-weight: 700 ;
     font-size: 150%;
     line-height: 25px;
     margin-top: 5px;
@@ -64,31 +82,44 @@
 }
 
 .attributesContainer {
-    /*width: 100%;*/
+    width: 100%;
 }
 
 .title {
-    font-family: Roboto Condensed;
+    font-family: Roboto Condensed,sans-serif;
     font-weight: 700;
-    font-size: 150%;
+    font-size: 100%;
+    line-height: 18px;
     margin-bottom: 8px;
 }
 
 .list {
+    /*width: 50%;*/
     /*display: flex;*/
 }
 
 .attributeItem {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /*width: 15%;*/
-    /*height: 20px;*/
-    border: 1px solid #1D1F22;
+    display: inline-block;
+    font-family: Source Sans Pro,sans-serif;
+    /*width: 10%;*/
+    /*height: 10px;*/
+    /*border: 1px solid #1D1F22;*/
+    /*margin-right: 5px;*/
+    /*!*margin-bottom: 20px;*!*/
+    /*font-size: 150%;*/
+    /*font-weight: 700;*/
+    /*!*padding: 3%;*!*/
+    /*cursor: pointer;*/
+    font-size: 100%;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.05em;
+    text-align: center;
+    border: 1px #1D1F22 solid ;
+    background-color:#ffffff ;
+    color: #1D1F22;
     margin-right: 5px;
     /*margin-bottom: 20px;*/
-    font-size: 10px;
-    font-weight: 700;
     padding: 3%;
     cursor: pointer;
 }
@@ -99,13 +130,21 @@
 
 .galleryBlock {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
+
     /*margin-left: 20px;*/
-    width: 70%;
+    /*width: 60%;*/
+    /*position: absolute;*/
+    /*left: 30%;*/
+    /*right: 6.94%;*/
+    /*top: 20.07%;*/
+    /*bottom: 59.28%;*/
+    /*background-color: #5ece7b;*/
     /*height: 50%;*/
     /*left: calc(50% - 121px/2 + 86px);*/
     /*top: calc(50% - 190px/2);*/
+    /*position: relative;*/
 
 }
 
@@ -113,8 +152,13 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    /*width: 90%;*/
 
-    width: 90%;
+    /*position: static;*/
+    /*width: 121px;*/
+    /*height: 190px;*/
+    /*left: calc(50% - 121px/2 + 86px);*/
+    /*top: calc(50% - 190px/2);*/
 
 
 }
@@ -123,9 +167,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    font-family: 'Raleway', 'sans-serif';
     font-weight: 500;
     font-size: 2em;
-    line-height: 3em;
+    line-height: 5em;
+    padding: 10px;
     color: #1d1f22;
 
 
@@ -138,92 +184,51 @@
 }
 
 .value {
-    font-family: Raleway;
+    font-family: Raleway,sans-serif;
     font-weight: 500;
     font-size: 0.5em;
     color: #1d1f22;
 
 }
 
-.imageContainer {
-    /*width: 100%;*/
-    /*height: 100%;*/
-    display: flex;
-    justify-content: center;
-    object-fit: contain;
-
-}
-
-.cartImgItem {
-    display: flex;
-    /*width: 70%;*/
-    /*height: 185px;*/
-    object-fit: contain;
-    /*margin-left: 30%;*/
-}
 
 .image {
-    width: 50%;
-}
+    /*position: static;*/
+    /*width: 121px;*/
+    /*height: 190px;*/
+    /*left: calc(50% - 121px/2 + 86px);*/
+    /*top: calc(50% - 190px/2);*/
+    width: 80px;
+    height: 100px;
 
-.arrowContainer {
-    position: relative;
-
-}
-
-.leftArrow {
-    position: absolute;
-    width: 5%;
-    top: 90%;
-    left: 45%;
-    cursor: pointer;
-    border: 1px black solid;
-
-}
-
-.leftArrow::after {
-    content: "<";
-    font-size: 20px;
-}
-
-.rightArrow {
-    position: absolute;
-    width: 5%;
-    top: 90%;
-    right: 40%;
-    border: 1px black solid;
-    cursor: pointer;
-}
-
-.rightArrow::after {
-    content: ">";
-    font-size: 20px;
-}
-
-.line {
+    /*min-height: auto;*/
+    /*height: 100%;*/
     /*position: absolute;*/
-    width: 95%;
-    height: 1px;
-    left: 100px;
-    top: 929px;
 
-    background: #E5E5E5;
+    /*!*top: 50%;*!*/
+    /*right: 150%;*/
+
+    /*transform: translate(-50%, -50%);*/
 }
+
 
 .total {
-    display: flex;
-    flex-direction: column;
-    align-self: flex-start;
+    font-family: 'Raleway', 'sans-serif';
+    font-size: 150%;
+    font-weight: 400;
+    line-height: 26px;
 
-    /*margin-top: 50px;*/
+    margin-top: 50px;
     /*margin-right: 85%;*/
-    padding-left: 5%;
+    /*padding-left: 5%;*/
 }
 
 .totalTitle {
+font-weight: 500;
     font-size: 150%;
 }
 
 .totalPrice {
-    font-size: 150%;
+    font-weight: 900;
+    font-size: 26px;
 }
