--- a/src/views/cartModal/CartModal.module.css
+++ b/src/views/cartModal/CartModal.module.css
@@ -1,15 +1,15 @@
 
-.container {
+.cartModalBlock {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    overflow: auto;
-    /*padding: 32px 16px ;*/
-    box-sizing: border-box;
-    width: 340px;
-    max-height: 500px;
+    overflow: hidden ;
+    padding: 10px 0 ;
+    /*box-sizing: border-box;*/
+
+    /*height: 500px;*/
     white-space: nowrap;
     top:78px;
     font-size: 70%;
@@ -18,12 +18,13 @@
     /*position: absolute;*/
     /*right: 87px;*/
 
-    /*min-width: 325px;*/
-    /*height: 80%;*/
-    /*color: #1D1F22;*/
-    /*background-color: #FFFFFF;*/
-    /*padding: 20px 13px;*/
-    /*z-index: 11;*/
+    /*width: 325px;*/
+    height: 500px;
+}
+.cartModalContainers{
+    /*width: 100%;*/
+    height: 520px;
+    overflow: auto;
 }
 .title {
     position: fixed;
@@ -35,7 +36,7 @@
     line-height: 26px;
 }
 
-.titleSpan {
+.titleItems {
     font-weight: 500;
 
 }
@@ -43,8 +44,9 @@
 .buttons {
     position: fixed;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     bottom: 185px;
+    right: 90px;
     /*margin-top: 30px;*/
 
 }
