--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,12 +1,15 @@
 .header{
+    position: fixed;
     width: 100%;
-    height: 100px;
+    height: 78px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    z-index: 21;
     /*!*margin-left:80px;*!*/
     /*padding-top: 10px;*/
-    /*background-color: gold;*/
+    ///*background-color: gold;*/
+    background-color: white;
 
 }
 .logo{
