--- a/src/views/product/ProductAttributes.module.css
+++ b/src/views/product/ProductAttributes.module.css
@@ -43,14 +43,47 @@
     border: 1px solid #A6A6A6;
     color: #A6A6A6;
 }
-
+.attributeItemSwatch{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    border:1px #ece9e9 outset;
+    /*font-family: Source Sans Pro,sans-serif;*/
+    /*font-size: 16px;*/
+    /*font-weight: 400;*/
+    /*line-height: 18px;*/
+    /*letter-spacing: 0.05em;*/
+    /*text-align: center;*/
+    margin-right: 5px;
+    /*margin-bottom: 20px;*/
+    padding: 3%;
+    cursor: pointer;
+}
 .active {
     color:#ffffff ;
     background: #1D1F22;
 
 }
 .activeSwatch{
-    border: 3px solid #5ECE7B
+    /*box-sizing: border-box;*/
+
+    position: relative;
+    width: 20px;
+    height: 20px;
+    left: 0px;
+    top: 0px;
+
+
+}
+.activeSwatch::before{
+    box-sizing: border-box;
+    position: absolute;
+    content: '';
+    width: 24px;
+    height: 24px;
+    border: 1px solid #5ECE7B;
 }
 /*.activeSwatch{*/
 /*    display: flex;*/
