--- a/src/views/cart/Cart.module.scss
+++ b/src/views/cart/Cart.module.scss
@@ -1,13 +1,13 @@
 @import "../../common/styles/sass/mixins";
 
 .cartBlock {
-  ///*width: 100%;
+ //width: 100%;
   /*height: 100%;*/
  //position: relative;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  padding: 20px 50px;
+  padding: 100px 50px;
 
   /*align-items: center;*/
   /*height: 500px;*/
@@ -18,11 +18,11 @@
 
 .cartLine {
   /*height: 186px;*/
-  /*padding-top: 20px;*/
-  margin-bottom: 20px;
+padding-top: 10px;
+  margin-bottom: 30px;
   border-top: 1px solid #e5e5e5;
 
-  /*width: 100%;*/
+  ///*width: 100%;
   /*height: 1px;*/
   /*left: 100px;*/
   /*top: 929px;*/
@@ -30,7 +30,7 @@
 }
 
 .cartTitle {
-  /*padding-bottom: 5px;*/
+//padding-bottom: 5px;
 
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
@@ -38,6 +38,7 @@
   font-weight: 700;
   font-size: 150%;
   line-height: 70px;
+  margin-bottom:20px ;
 }
 
 .cartContainer {
@@ -53,8 +54,7 @@
 }
 
 .attributeContainer {
-  width: 100%;
-
+  width: 50%;
   line-height: 1.5em;
   display: flex;
   flex-direction: column;
@@ -63,21 +63,34 @@
   /*background-color: #c51111;*/
 }
 
-.brand {
+.brandModal {
   @include text(Raleway, 16px, 300, 160%);
 
 }
+.brandCart {
+  @include text(Raleway, 30px, 600, 160%);
 
-.name {
+}
+
+.nameModal {
   @include text(Raleway, 16px, 300, 160%);
 
 
 }
+.nameCart{
+  @include text(Raleway, 30px, 500, 160%);
+}
 
-.price {
+.priceModal {
   @include text(Raleway, 16px, 600, 160%);
   margin-top: 5px;
   margin-bottom: 27px;
+
+}
+.priceCart {
+  @include text(Raleway, 24px, 700, 160%);
+  //margin-top: 5px;
+  //margin-bottom: 27px;
 
 }
 
@@ -85,48 +98,56 @@
   width: 100%;
 }
 
-.title {
+.titleModal {
   @include text(Raleway, 14px, 400, 16px);
   margin-bottom: 8px;
 }
-
+.titleCart{
+  @include text(Raleway, 18px, 700, 18px);
+  margin-bottom: 8px;
+}
 .list {
-  /*width: 50%;*/
-  //display: flex;
+ //width: 70%;
+display: flex;
   //justify-content: center;
-  //align-items: center;
-  //text-align: center;
+  ////align-items: center;
+  text-align: center;
+
 }
 
 .attributeItem {
   //position: absolute;
-  //display: inline-block;
+  display: flex;
+  justify-content: center;
   //flex-direction: column;
-  //align-items: center;
-  @include text(Source Sans Pro, 14px, 400, 160%);
+  align-items: center;
+  @include text(Source Sans Pro, 1em, 400, 160%);
   //text-align: center;
   border: 1px #1D1F22 solid;
   background-color: #ffffff;
   color: #1D1F22;
   margin-right: 5px;
-  //width: 24px;
-  //height: 24px;
+  //width: 27px;
+  //height: 10%;
   //left: 0px;
   //top: 0px;
   /*margin-bottom: 20px;*/
+  white-space: nowrap;
+  overflow: hidden;
   padding: 3%;
-  cursor: pointer;
 }
 
 .active {
-  border: 2px solid #c51111 !important;
+  color:#ffffff ;
+  background: #1D1F22;
+
 }
 .attributeItemSwatch{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 32px;
-  height: 32px;
+  width: 16px;
+  height: 16px;
   border:1px #ece9e9 outset;
   /*font-family: Source Sans Pro,sans-serif;*/
   /*font-size: 16px;*/
@@ -137,20 +158,17 @@
   margin-right: 5px;
   /*margin-bottom: 20px;*/
   padding: 3%;
-  cursor: pointer;
 }
-.attributeItemSwatch:hover {
-  border: 1px solid #A6A6A6;
-  color: #A6A6A6;
-}
-.activeSwatch{
-  /*box-sizing: border-box;*/
 
+.activeSwatch{
+  ///*box-sizing: border-box;
   position: relative;
-  width: 32px;
-  height: 32px;
+  width: 16px;
+  height: 16px;
   left: 0px;
   top: 0px;
+  //padding: 3%;
+  //border: 1px #5ece7b solid;
 
 
 }
@@ -158,9 +176,10 @@
   box-sizing: border-box;
   position: absolute;
   content: '';
-  width: 36px;
-  height: 36px;
-  border: 1px solid #5ECE7B;
+  width: 20px;
+  height: 20px;
+padding: 55%;
+  border: 2px solid #5ECE7B;
 }
 .galleryBlock {
   display: flex;
@@ -168,7 +187,7 @@
   align-items: center;
 
   /*margin-left: 20px;*/
-  /*width: 60%;*/
+width: 100%;
   /*position: absolute;*/
   /*left: 30%;*/
   /*right: 6.94%;*/
@@ -186,7 +205,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
- //width: %;
+ //width: 100%;
 
   /*position: static;*/
   /*width: 121px;*/
@@ -250,22 +269,36 @@
 .total {
 //position: relative;
 //  display: flex;
-  margin-top: 50px;
+//  margin-top: 20px;
   /*margin-right: 85%;*/
   /*padding-left: 5%;*/
 }
 
-.totalTitle {
+.totalTitleModal {
   //display: flex;
   ////align-items: center;
   //text-align: left;
-  @include text('Roboto', 16px, 500, 18px);
+  @include text(Roboto, 16px, 500, 18px);
+  font-style: normal;
+}
+.totalTitleCart {
+  //display: flex;
+  ////align-items: center;
+  //text-align: left;
+  @include text(Raleway, 24px, 700, 24px);
   font-style: normal;
 }
 
-.totalPrice {
-  @include text('Roboto', 16px, 700, 160%);
+.totalPriceModal {
+  @include text(Roboto, 16px, 700, 160%);
   margin-left: 150px;
+  //float: right;
+
+
+}
+.totalPriceCart{
+  @include text(Raleway, 24px, 700, 160%);
+  margin-left: 23px;
   //float: right;
 
 
