--- a/src/views/product/ProductAttributes.module.scss
+++ b/src/views/product/ProductAttributes.module.scss
@@ -1,6 +1,6 @@
 .attributesContainer {
-    /*display: flex;*/
-    /*flex-direction: column;*/
+    /*display: flex;
+    /*flex-direction: column;
     /*margin-bottom: 20px;*/
 }
 
