--- a/src/views/cart/Cart.module.scss
+++ b/src/views/cart/Cart.module.scss
@@ -1,305 +1,193 @@
 @import "../../common/styles/sass/mixins";
 
 .cartBlock {
- //width: 100%;
-  /*height: 100%;*/
- //position: relative;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  padding: 100px 50px;
-
-  /*align-items: center;*/
-  /*height: 500px;*/
-  /*background-color: #8d8f9a;*/
-
-
-}
-
-.cartLine {
-  /*height: 186px;*/
-padding-top: 10px;
-  margin-bottom: 30px;
-  border-top: 1px solid #e5e5e5;
-
-  ///*width: 100%;
-  /*height: 1px;*/
-  /*left: 100px;*/
-  /*top: 929px;*/
-  /*background: #E5E5E5;*/
-}
-
-.cartTitle {
-//padding-bottom: 5px;
-
-  text-transform: uppercase;
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 150%;
-  line-height: 70px;
-  margin-bottom:20px ;
-}
-
-.cartContainer {
-  /*width: 100%;*/
-  display: flex;
-  justify-content: space-between;
-  /*align-items: center;*/
-  /*padding: 32px 16px;*/
-  margin-top: 10px;
-  /*background-color: #5ece7b;*/
-  /*width: 90%;*/
-
-}
-
-.attributeContainer {
-  width: 50%;
-  line-height: 1.5em;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  /*align-items: flex-start;*/
-  /*background-color: #c51111;*/
-}
+  padding: 10px 50px;
 
-.brandModal {
-  @include text(Raleway, 16px, 300, 160%);
+  .cartTitle {
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 150%;
+    line-height: 100px;
+    margin-top: 80px;
+  }
 
-}
-.brandCart {
-  @include text(Raleway, 30px, 600, 160%);
+  .cartLine {
+    padding-top: 10px;
+    margin-bottom: 30px;
+    border-top: 1px solid #e5e5e5;
+  }
 
-}
+  .cartContainer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
 
-.nameModal {
-  @include text(Raleway, 16px, 300, 160%);
+    .attributeContainer {
+      width: 50%;
+      line-height: 1.5em;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
 
+      .brandModal {
+        @include text(Raleway, 16px, 300, 160%);
+      }
 
-}
-.nameCart{
-  @include text(Raleway, 30px, 500, 160%);
-}
+      .brandCart {
+        @include text(Raleway, 30px, 600, 160%);
+        //margin-bottom: 10px;
+      }
 
-.priceModal {
-  @include text(Raleway, 16px, 600, 160%);
-  margin-top: 5px;
-  margin-bottom: 27px;
+      .nameModal {
+        @include text(Raleway, 16px, 300, 160%);
+      }
 
-}
-.priceCart {
-  @include text(Raleway, 24px, 700, 160%);
-  //margin-top: 5px;
-  //margin-bottom: 27px;
+      .nameCart {
+        @include text(Raleway, 30px, 400, 160%);
+      }
 
-}
+      .priceModal {
+        @include text(Raleway, 16px, 600, 160%);
+        margin-top: 5px;
+      }
 
-.attributesContainer {
-  width: 100%;
-}
+      .priceCart {
+        @include text(Raleway, 24px, 700, 32px);
+      }
 
-.titleModal {
-  @include text(Raleway, 14px, 400, 16px);
-  margin-bottom: 8px;
-}
-.titleCart{
-  @include text(Raleway, 18px, 700, 18px);
-  margin-bottom: 8px;
-}
-.list {
- //width: 70%;
-display: flex;
-  //justify-content: center;
-  ////align-items: center;
-  text-align: center;
+      .attributesContainer {
+        width: 100%;
+
+        .titleModal {
+          @include text(Raleway, 14px, 400, 16px);
+          margin-bottom: 8px;
+        }
+
+        .titleCart {
+          @include text(Roboto Condensed, 18px, 700, 18px);
+          margin-bottom: 8px;
+        }
+
+        .list {
+          display: flex;
+          text-align: center;
+        }
+
+      }
+
+    }
+
+  }
 
 }
 
 .attributeItem {
-  //position: absolute;
+  @include text(Source Sans Pro, 1em, 400, 160%);
   display: flex;
   justify-content: center;
-  //flex-direction: column;
   align-items: center;
-  @include text(Source Sans Pro, 1em, 400, 160%);
-  //text-align: center;
   border: 1px #1D1F22 solid;
   background-color: #ffffff;
   color: #1D1F22;
   margin-right: 5px;
-  //width: 27px;
-  //height: 10%;
-  //left: 0px;
-  //top: 0px;
-  /*margin-bottom: 20px;*/
   white-space: nowrap;
   overflow: hidden;
   padding: 3%;
 }
 
 .active {
-  color:#ffffff ;
+  color: #ffffff;
   background: #1D1F22;
-
 }
-.attributeItemSwatch{
+
+.attributeItemSwatch {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 16px;
   height: 16px;
-  border:1px #ece9e9 outset;
-  /*font-family: Source Sans Pro,sans-serif;*/
-  /*font-size: 16px;*/
-  /*font-weight: 400;*/
-  /*line-height: 18px;*/
-  /*letter-spacing: 0.05em;*/
-  /*text-align: center;*/
+  border: 1px #ece9e9 outset;
   margin-right: 5px;
-  /*margin-bottom: 20px;*/
   padding: 3%;
 }
 
-.activeSwatch{
-  ///*box-sizing: border-box;
+.activeSwatch {
   position: relative;
   width: 16px;
   height: 16px;
   left: 0px;
   top: 0px;
-  //padding: 3%;
-  //border: 1px #5ece7b solid;
-
-
 }
-.activeSwatch::before{
+
+.activeSwatch::before {
   box-sizing: border-box;
   position: absolute;
   content: '';
   width: 20px;
   height: 20px;
-padding: 55%;
+  padding: 55%;
   border: 2px solid #5ECE7B;
 }
+
 .galleryBlock {
+  width: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 
-  /*margin-left: 20px;*/
-width: 100%;
-  /*position: absolute;*/
-  /*left: 30%;*/
-  /*right: 6.94%;*/
-  /*top: 20.07%;*/
-  /*bottom: 59.28%;*/
-  /*background-color: #5ece7b;*/
-  /*height: 50%;*/
-  /*left: calc(50% - 121px/2 + 86px);*/
-  /*top: calc(50% - 190px/2);*/
-  /*position: relative;*/
+  .galleryContainer {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 
+    .counter {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      font-family: 'Raleway', 'sans-serif';
+      font-weight: 500;
+      font-size: 2em;
+      line-height: 5em;
+      padding: 15px;
+      color: #1d1f22;
+
+      .button {
+        background: none;
+        border: 1px solid #1d1f22;
+        cursor: pointer;
+      }
+
+      .value {
+        @include text('Raleway', 16px, 500, 4.5em);
+      }
+    }
+  }
 }
-
-.galleryContainer {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
- //width: 100%;
-
-  /*position: static;*/
-  /*width: 121px;*/
-  /*height: 190px;*/
-  /*left: calc(50% - 121px/2 + 86px);*/
-  /*top: calc(50% - 190px/2);*/
-
-
-}
-
-.counter {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  font-family: 'Raleway', 'sans-serif';
-  font-weight: 500;
-  font-size: 2em;
-  line-height: 5em;
-  padding: 10px;
-  color: #1d1f22;
-
-
-}
-
-.button {
-  background: none;
-  border: 1px solid #1d1f22;
-  cursor: pointer;
-}
-
-.value {
-  @include text('Raleway', 16px, 500, 4.5em);
-  //font-family: Raleway, sans-serif;
-  //font-weight: 500;
-  //font-size: 0.5em;
-  //color: #1d1f22;
-
-}
-
 
 .image {
-  /*position: static;*/
-  /*width: 121px;*/
-  /*height: 190px;*/
-  /*left: calc(50% - 121px/2 + 86px);*/
-  /*top: calc(50% - 190px/2);*/
   width: 80px;
   height: 100px;
-
-  /*min-height: auto;*/
-  /*height: 100%;*/
-  /*position: absolute;*/
-
-  /*!*top: 50%;*!*/
-  /*right: 150%;*/
-
-  /*transform: translate(-50%, -50%);*/
-}
-
-
-.total {
-//position: relative;
-//  display: flex;
-//  margin-top: 20px;
-  /*margin-right: 85%;*/
-  /*padding-left: 5%;*/
 }
 
 .totalTitleModal {
-  //display: flex;
-  ////align-items: center;
-  //text-align: left;
   @include text(Roboto, 16px, 500, 18px);
-  font-style: normal;
+  margin-top: 30px;
 }
+
 .totalTitleCart {
-  //display: flex;
-  ////align-items: center;
-  //text-align: left;
   @include text(Raleway, 24px, 700, 24px);
-  font-style: normal;
 }
 
 .totalPriceModal {
   @include text(Roboto, 16px, 700, 160%);
   margin-left: 150px;
-  //float: right;
-
-
 }
-.totalPriceCart{
+
+.totalPriceCart {
   @include text(Raleway, 24px, 700, 160%);
   margin-left: 23px;
-  //float: right;
-
-
 }
