--- a/src/views/cartModal/CartModal.module.scss
+++ b/src/views/cartModal/CartModal.module.scss
@@ -1,14 +1,13 @@
 @import "../../common/styles/sass/mixins";
 
 .cartModalBlock {
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
   padding: 10px 0;
-  /*box-sizing: border-box;*/
-  /*height: 500px;*/
   white-space: nowrap;
   font-size: 70%;
   position: fixed;
@@ -18,65 +17,75 @@
   background: #FFFFFF;
   right: 80px;
   z-index: 21;
-  /*position: absolute;*/
-  /*right: 87px;*/
-  /*width: 325px;*/
+
+  .cartModalContainers {
+    height: 550px;
+    margin-top: 45px;
+    overflow: auto;
+
+
+    .title {
+      @include text(Raleway, 16px, 700, 25.6px);
+      position: fixed;
+      top: 78px;
+      right: 270px;
+      .titleItems {
+        @include text(Raleway, 16px, 500, 25.6px);
+      }
+    }
+
+    .buttons {
+      position: fixed;
+      display: flex;
+      justify-content: center;
+      bottom: 185px;
+      right: 90px;
+
+      & button {
+        text-transform: uppercase;
+        width: 140px;
+        height: 43px;
+        cursor: pointer;
+        margin: 0px 7px;
+      }
+
+      .viewBtn {
+        @include text(Raleway, 14px, 600, 16.8px);
+        color: #1d1f22;
+        background-color: #ffffff;
+        border: 1px solid #1d1f22;
+        cursor: pointer;
+
+        &:hover {
+          transform: scale(1.05);
+        }
+      }
+
+      .checkoutButton {
+        @include text(Raleway, 14px, 600, 16.8px);
+        color: #ffffff;
+        background-color: #5ECE7B;
+        border: none;
+
+        &:hover {
+          transform: scale(1.05);
+        }
+      }
+    }
+  }
 }
 
+
 .cartModalContainers {
-  /*width: 100%;*/
   height: 520px;
   overflow: auto;
 }
 
-.title {
-  @include text(Raleway, 16px, 700, 25.6px);
-  position: fixed;
-  top: 78px;
-  right: 270px;
 
 
-}
-
-.titleItems {
-  @include text(Raleway, 16px, 500, 25.6px);
-
-}
-
-.buttons {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  bottom: 185px;
-  right: 90px;
-  /*margin-top: 30px;*/
-
-}
 
 
-.buttons button {
-  text-transform: uppercase;
-  width: 140px;
-  height: 43px;
-  cursor: pointer;
-  margin: 0px 7px;
-}
 
-.viewBtn {
-  @include text(Raleway, 14px, 600, 16.8px);
-  color: #1d1f22;
-  background-color: #ffffff;
-  border: 1px solid #1d1f22;
-  cursor: pointer;
-}
 
-.viewBtn:hover {
 
-}
 
-.checkoutButton {
-  @include text(Raleway, 14px, 600, 16.8px);
-  color:  #ffffff;
-  background-color: #5ECE7B;
-  border: none;
-}
