--- a/src/views/product/Product.module.scss
+++ b/src/views/product/Product.module.scss
@@ -1,90 +1,96 @@
 @import "../../common/styles/sass/mixins.scss";
-.item{
+
+.itemContainer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   margin: 20px;
   position: relative;
-  box-sizing:border-box;
+  box-sizing: border-box;
   align-items: center;
   cursor: pointer;
   padding: 16px;
+
+  &:nth-child(-3n) {
+    margin-bottom: 0;
+  }
+
+  &:hover {
+    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+  }
+
+  .itemLink {
+    text-decoration: none;
+    color: #000000;
+
+    .itemImage {
+      position: relative;
+      display: flex;
+      margin-bottom: 24px;
+      width: 356px;
+      height: 338px;
+      object-fit: contain;
+    }
+
+    .outStock {
+      position: absolute;
+      align-items: center;
+      padding-top: 136px;
+      padding-bottom: 270px;
+      text-align: center;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 160%;
+      color: #8d8f9a;
+      top: 0;
+      left: 0;
+      width: 356px;
+      background: #ffffff;
+      opacity: 0.5;
+    }
+
+    .itemName {
+      @include text(Raleway, 16px, 300, 160%);
+    }
+
+    .itemPrice {
+      @include text(Raleway, 18px, 600, 160%);
+    }
+  }
+
+  .addBtn {
+    position: absolute;
+    top: 330px;
+    right: 10px;
+    left: 320px;
+    background-color: #5ECE7B;
+    width: 40px;
+    height: 40px;
+    border: none;
+    border-radius: 60%;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.3);
+    }
+
+    .btnSvg {
+      position: relative;
+      width: 80%;
+      left: 50%;
+      transform: translate(-65%, 0);
+    }
+  }
 }
 
 
 
-.item:nth-child(-3n) {
-  margin-bottom: 0;
-}
-.item:hover {
-  box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
-}
-
-.itemLink{
-  text-decoration: none;
-  color: #000000
-}
-.itemImage{
-  position: relative;
-  display: flex;
-  margin:0 auto;
-  margin-bottom: 24px;
-  width: 356px;
-  height: 338px;
-  object-fit: contain;
-}
-.outStock{
-  position: absolute;
-  align-items: center;
-  padding-top: 136px;
-  padding-bottom: 270px;
-  text-align: center;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 160%;
-  color: #8d8f9a;
-  top: 0;
-  left: 0;
-  width: 356px;
-
-  background: #ffffff;
-  opacity: 0.5;
-}
-
-.addBtn{
-  position: absolute;
-  top:330px;
-  right:10px;
-  left:320px;
-  background-color: #5ECE7B;
-  width:40px;
-  height:40px;
-  border:none;
-  border-radius: 60%;
-  cursor: pointer;
-}
-
-.addBtn:hover{
-  box-shadow: -2px 4px 37px 3px #5ECE7B;
-
-}
-
-.btnSvg{
-  position: relative;
-  width:80%;
-  left: 50%;
-  transform: translate(-65%, 0);
 
 
 
 
-}
-.itemName{
-  @include text(Raleway, 16px, 300, 160%);
-}
-/*svg path{*/
-/*  fill: white;*/
-/*}*/
-.itemPrice{
-  @include text(Raleway, 18px, 600, 160%);
-}
+
+
+
+
+
