--- a/src/views/product/Product.module.scss
+++ b/src/views/product/Product.module.scss
@@ -10,77 +10,87 @@
   align-items: center;
   cursor: pointer;
   padding: 16px;
+}
 
-  &:nth-child(-3n) {
-    margin-bottom: 0;
-  }
+.itemContainer:nth-child(3n) {
+  //  order: 1;
+  //background-color: #5ECE7B;
+  //width: 33%;
+  //margin: 0;
+  //    //clear: both;
+}
 
-  &:hover {
-    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
-  }
+.itemContainer:hover {
+  box-shadow: 0 4px 35px rgba(168, 172, 176, 0.19);
+}
 
-  .itemLink {
-    text-decoration: none;
-    color: #000000;
+.itemLink {
+  width: 386px;
+  height: 444px;
+  text-decoration: none;
+  color: #000000;
+}
 
-    .itemImage {
-      position: relative;
-      display: flex;
-      margin-bottom: 24px;
-      width: 356px;
-      height: 338px;
-      object-fit: contain;
-    }
+.itemImage {
+  position: relative;
+  display: flex;
+  margin-bottom: 24px;
+  width: 356px;
+  height: 338px;
+  object-fit: contain;
 
-    .outStock {
-      position: absolute;
-      align-items: center;
-      padding-top: 136px;
-      padding-bottom: 270px;
-      text-align: center;
-      font-size: 24px;
-      font-weight: 400;
-      line-height: 160%;
-      color: #8d8f9a;
-      top: 0;
-      left: 0;
-      width: 356px;
-      background: #ffffff;
-      opacity: 0.5;
-    }
+}
 
-    .itemName {
-      @include text(Raleway, 18px, 300, 160%);
-    }
+.outStock {
+  position: absolute;
+  align-items: center;
+  padding-top: 136px;
+  padding-bottom: 270px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 160%;
+  color: #8d8f9a;
+  top: 0;
+  left: 0;
+  width: 356px;
+  background: #ffffff;
+  opacity: 0.5;
+}
 
-    .itemPrice {
-      @include text(Raleway, 18px, 600, 160%);
-    }
-  }
+.itemName {
 
-  .addBtn {
-    position: absolute;
-    top: 330px;
-    right: 10px;
-    left: 320px;
-    background-color: #5ECE7B;
-    width: 40px;
-    height: 40px;
-    border: none;
-    border-radius: 60%;
-    cursor: pointer;
+  @include text(Raleway, 18px, 300, 160%);
+}
 
-    &:hover {
-      transform: scale(1.3);
-    }
+.itemPrice {
+  @include text(Raleway, 18px, 600, 160%);
+}
 
-    .btnSvg {
-      position: relative;
-      width: 80%;
-      left: 50%;
-      transform: translate(-65%, 0);
-    }
-  }
+
+.addBtn {
+  position: absolute;
+  top: 330px;
+  right: 10px;
+  left: 320px;
+  background-color: #5ECE7B;
+  width: 52px;
+  height: 52px;
+  border: none;
+  border-radius: 60%;
+  cursor: pointer;
+}
+
+.addBtn:hover {
+  transform: scale(1.3);
+}
+
+.btnSvg {
+  position: relative;
+  width: 80%;
+  left: 50%;
+  transform: translate(-65%, 0);
+
 }
 
 
