--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
     font-family: "Raleway", sans-serif;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
