--- a/src/components/button/ButtonColor.module.scss
+++ b/src/components/button/ButtonColor.module.scss
@@ -19,8 +19,8 @@
   position: relative;
   width: 32px;
   height: 32px;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
 }
 
 .activeSwatch::before {
