--- a/src/components/currency/Currency.module.scss
+++ b/src/components/currency/Currency.module.scss
@@ -1,4 +1,5 @@
 @import "../../common/styles/sass/mixins";
+@import "../../common/styles/sass/variables";
 
 .currency {
   width: 40px;
@@ -39,10 +40,10 @@
     margin-top: 20px;
     margin-left: -10px;
     z-index: 10;
-    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+    box-shadow: 0 4px 35px rgba(168, 172, 176, 0.19);
 
     .optionsButton {
-      @include text(Raleway, 18px, 500, 160%);
+      @include text($fontFamilyRaleWay, 18px, 500, 160%);
       padding: 20px 0;
       border: none;
       background-color: #FFF;
