--- a/src/components/navBar/NavBar.module.scss
+++ b/src/components/navBar/NavBar.module.scss
@@ -1,4 +1,5 @@
 @import "../../common/styles/sass/mixins";
+@import "../../common/styles/sass/variables";
 
 .navBar {
   display: flex;
@@ -17,13 +18,13 @@
     text-decoration: none;
 
     .item {
-      @include text(Raleway, 16px, 400, 120%);
+      @include text($fontFamilyRaleWay, 16px, 400, 120%);
       text-decoration: none;
       padding: 4px 16px 32px 16px;
     }
 
     .active {
-      @include text(Raleway, 16px, 600, 120%);
+      @include text($fontFamilyRaleWay, 16px, 600, 120%);
       text-decoration: none;
       padding: 4px 16px 32px 16px;
       color: #5ece7b;
