--- a/src/views/cartModal/CartModal.module.scss
+++ b/src/views/cartModal/CartModal.module.scss
@@ -1,4 +1,5 @@
 @import "../../common/styles/sass/mixins";
+@import "../../common/styles/sass/variables";
 
 .cartModalBlock {
 
@@ -25,12 +26,12 @@
 
 
     .title {
-      @include text(Raleway, 16px, 700, 25.6px);
+      @include text($fontFamilyRaleWay, 16px, 700, 25.6px);
       position: fixed;
       top: 78px;
       right: 270px;
       .titleItems {
-        @include text(Raleway, 16px, 500, 25.6px);
+        @include text($fontFamilyRaleWay, 16px, 500, 25.6px);
       }
     }
 
@@ -46,11 +47,11 @@
         width: 140px;
         height: 43px;
         cursor: pointer;
-        margin: 0px 7px;
+        margin: 0 7px;
       }
 
       .viewBtn {
-        @include text(Raleway, 14px, 600, 16.8px);
+        @include text($fontFamilyRaleWay, 14px, 600, 16.8px);
         color: #1d1f22;
         background-color: #ffffff;
         border: 1px solid #1d1f22;
@@ -62,7 +63,7 @@
       }
 
       .checkoutButton {
-        @include text(Raleway, 14px, 600, 16.8px);
+        @include text($fontFamilyRaleWay, 14px, 600, 16.8px);
         color: #ffffff;
         background-color: #5ECE7B;
         border: none;
