--- a/src/views/modalAttributes/AttributeModal.module.scss
+++ b/src/views/modalAttributes/AttributeModal.module.scss
@@ -1,7 +1,7 @@
 .attributesContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   text-align: center;
   padding: 10px;
@@ -13,6 +13,16 @@
   transform: translate(-50%, -50%);
   background: #FFFFFF;
   z-index: 21;
+  .attribute{
+    & > div > div {
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  .title{
+    font-size: 30px;
+    border-bottom: 2px green solid;
+  }
   .btnAdd{
     text-transform: uppercase;
     width: 150px;
