--- a/src/views/product/ProductPage.module.scss
+++ b/src/views/product/ProductPage.module.scss
@@ -1,4 +1,5 @@
 @import "../../common/styles/sass/mixins";
+@import "../../common/styles/sass/variables";
 
 .pageContainer {
   width: 100%;
@@ -29,23 +30,20 @@
   }
 
   .productBrand {
-    @include text(Raleway, 30px, 600, 27px);
-
+    @include text($fontFamilyRaleWay, 30px, 600, 27px);
   }
 
   .productName {
     display: flex;
-    @include text(Raleway, 30px, 400, 27px);
+    @include text($fontFamilyRaleWay, 30px, 400, 27px);
   }
 
   .price {
-    @include text(Raleway, 18px, 700, 18px);
-    font-weight: 700;
-    font-size: 18px;
+    @include text($fontFamilyRaleWay, 18px, 700, 18px);
   }
 
   .productPrice {
-    @include text(Raleway, 24px, 700, 18px);
+    @include text($fontFamilyRaleWay, 24px, 700, 18px);
   }
 
   .btnAdd {
@@ -69,7 +67,9 @@
   }
 
   .productDescription {
-    @include text(Roboto, 18px, 400, 160%);
+    @include text(Roboto, 16px, 400, 160%);
+    width: 292px;
+    height: 103px;
     margin-top: 40px;
     text-decoration: none;
     margin-right: 10px;
