--- a/src/views/cart/Cart.module.scss
+++ b/src/views/cart/Cart.module.scss
@@ -187,6 +187,10 @@
   width: 80px;
   height: 100px;
 }
+.imageModal{
+  width: 200px;
+  height: 258px;
+}
 .quantity{
   @include text($fontFamilyRaleWay, 24px, 400, 28px);
   & span{
