--- a/src/views/cart/Cart.module.scss
+++ b/src/views/cart/Cart.module.scss
@@ -83,7 +83,7 @@
 }
 
 .attributeItem {
-  @include text(Source Sans Pro, 1em, 400, 16px);
+  @include text($fontFamilySansPro, 1em, 400, 16px);
   width: 63px;
   height: 45px;
   display: flex;
@@ -97,8 +97,9 @@
   overflow: hidden;
   //padding: 6%;
 }
-.attributeItemModal{
-  @include text(Source Sans Pro, 10px, 400, 160%);
+
+.attributeItemModal {
+  @include text($fontFamilySansPro, 10px, 400, 160%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,6 +110,7 @@
   width: 30px;
   height: 30px;
 }
+
 .active {
   color: #ffffff;
   background: #1D1F22;
@@ -124,7 +126,8 @@
   margin-right: 5px;
   padding: 3%;
 }
-.attributeItemSwatchModal{
+
+.attributeItemSwatchModal {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -133,6 +136,7 @@
   border: 1px #ece9e9 outset;
   margin-right: 5px;
 }
+
 .activeSwatch {
   position: relative;
   width: 16px;
@@ -163,21 +167,41 @@
     align-items: center;
 
     .counter {
-      @include text($fontFamilyRaleWay, 2em, 500, 5em);
       display: flex;
       flex-direction: column;
       text-align: center;
-      padding: 15px;
+      padding: 5px;
       color: #1d1f22;
 
       .button {
+        width: 42px;
+        height: 42px;
+        font-size: 20px;
         background: none;
         border: 1px solid #1d1f22;
         cursor: pointer;
       }
 
+      .valueModal {
+        @include text($fontFamilyRaleWay, 16px, 500, 5em);
+      }
+
       .value {
-        @include text($fontFamilyRaleWay, 16px, 500, 4.5em);
+        @include text($fontFamilyRaleWay, 24px, 500, 7em);
+      }
+
+    }
+    .counterModal{
+      @include text($fontFamilyRaleWay, 15px, 500, 5em);
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      padding: 5px;
+      color: #1d1f22;
+      & button{
+        background:none;
+        border: 1px solid #1d1f22;
+        cursor: pointer;
       }
     }
   }
@@ -185,15 +209,18 @@
 
 .image {
   width: 80px;
-  height: 100px;
+  height: 120px;
 }
-.imageModal{
+
+.imageModal {
   width: 200px;
   height: 258px;
 }
-.quantity{
+
+.quantity {
   @include text($fontFamilyRaleWay, 24px, 400, 28px);
-  & span{
+
+  & span {
     @include text($fontFamilyRaleWay, 24px, 700, 28px);
   }
 }
