fix: change start routes & style

--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,3 +1,4 @@
 $textColor: #1D1F22;
 $fontFamilyRaleWay:'Raleway', sans-serif;
 $fontFamilySansPro:'Source Sans Pro', sans-serif;
+$fontFamilyRobotoCondensed:'Roboto Condensed', sans-serif;
