--- a/src/views/cart/Cart.module.scss
+++ b/src/views/cart/Cart.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px 50px;
+  overflow: auto;
 
   .cartTitle {
     @include text($fontFamilyRaleWay, 150%, 700, 100px);
